[package]
name = "zip_recurse"
version = "2.0.0"
authors = ["alex@wiltondb.com"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/zip_recurse"
repository = "https://github.com/wiltondb/zip_recurse"
readme = "README.md"
categories = ["compression"]
description = "Library that allows to ZIP directories recursively"
include = [
    "src/*.rs",
    "Cargo.toml",
]

[dependencies]
chrono = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate-zlib"] }
